--- a/render.yaml
+++ b/render.yaml
@@ -6,6 +6,7 @@ services:
     buildCommand: |
       pip install -r requirements.txt
       python manage.py migrate
+      python manage.py create_admin_user
       python manage.py collectstatic --noinput
     startCommand: gunicorn proce.wsgi:application
     envVars:
